ch4/MiniJavaParser.java
/* MiniJavaParser.java */
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
import syntaxtree.*;

public class MiniJavaParser implements MiniJavaParserConstants {

  static final public Program Goal() throws ParseException {MainClass m; ClassDeclList cl = new ClassDeclList(); ClassDecl c;
    m = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      c = TypeDeclaration();
cl.addElement(c);
    }
    jj_consume_token(0);
{if ("" != null) return new Program(m, cl);}
    throw new Error("Missing return statement in function");
}

  static final public MainClass MainClass() throws ParseException {Identifier i1, i2; Statement s;
    jj_consume_token(CLASS);
    i1 = Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACK);
    jj_consume_token(RBRACK);
    i2 = Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    s = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
{if ("" != null) return new MainClass(i1, i2, s);}
    throw new Error("Missing return statement in function");
}

  static final public ClassDecl TypeDeclaration() throws ParseException {ClassDecl c;
    if (jj_2_1(3)) {
      c = ClassDeclaration();
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CLASS:{
        c = ClassExtendsDeclaration();
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return c;}
    throw new Error("Missing return statement in function");
}

  static final public ClassDecl ClassDeclaration() throws ParseException {Identifier i; VarDeclList vl = new VarDeclList(); VarDecl v; MethodDeclList ml = new MethodDeclList(); MethodDecl m;
    jj_consume_token(CLASS);
    i = Identifier();
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      v = VarDeclaration();
vl.addElement(v);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      m = MethodDeclaration();
ml.addElement(m);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new ClassDeclSimple(i, vl, ml);}
    throw new Error("Missing return statement in function");
}

  static final public ClassDecl ClassExtendsDeclaration() throws ParseException {Identifier i, j; VarDeclList vl = new VarDeclList(); VarDecl v; MethodDeclList ml = new MethodDeclList(); MethodDecl m;
    jj_consume_token(CLASS);
    i = Identifier();
    jj_consume_token(EXTENDS);
    j = Identifier();
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      v = VarDeclaration();
vl.addElement(v);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PUBLIC:{
        ;
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      m = MethodDeclaration();
ml.addElement(m);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new ClassDeclExtends(i, j, vl, ml);}
    throw new Error("Missing return statement in function");
}

  static final public VarDecl VarDeclaration() throws ParseException {Type t; Identifier i;
    t = Type();
    i = Identifier();
    jj_consume_token(SEMI);
{if ("" != null) return new VarDecl(t, i);}
    throw new Error("Missing return statement in function");
}

  static final public MethodDecl MethodDeclaration() throws ParseException {Type t; Identifier i; FormalList fl = new FormalList(); VarDeclList vl = new VarDeclList(); VarDecl v; StatementList sl = new StatementList(); Statement s; Exp e;
    jj_consume_token(PUBLIC);
    t = Type();
    i = Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:{
      fl = FormalParameterList();
      break;
      }
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      v = VarDeclaration();
vl.addElement(v);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case PRINTLN:
      case LBRACE:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        break label_7;
      }
      s = Statement();
sl.addElement(s);
    }
    jj_consume_token(RETURN);
    e = Expression();
    jj_consume_token(SEMI);
    jj_consume_token(RBRACE);
{if ("" != null) return new MethodDecl(t, i, fl, vl, sl, e);}
    throw new Error("Missing return statement in function");
}

  static final public FormalList FormalParameterList() throws ParseException {FormalList fl = new FormalList(); Formal f;
    f = FormalParameter();
fl.addElement(f);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      f = FormalParameterRest();
fl.addElement(f);
    }
{if ("" != null) return fl;}
    throw new Error("Missing return statement in function");
}

  static final public Formal FormalParameter() throws ParseException {Type t; Identifier i;
    t = Type();
    i = Identifier();
{if ("" != null) return new Formal(t, i);}
    throw new Error("Missing return statement in function");
}

  static final public Formal FormalParameterRest() throws ParseException {Formal f;
    jj_consume_token(COMMA);
    f = FormalParameter();
{if ("" != null) return f;}
    throw new Error("Missing return statement in function");
}

  static final public Type Type() throws ParseException {Type t; Identifier i;
    if (jj_2_3(3)) {
      t = ArrayType();
{if ("" != null) return t;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case BOOLEAN:{
        t = BooleanType();
{if ("" != null) return t;}
        break;
        }
      case INT:{
        t = IntegerType();
{if ("" != null) return t;}
        break;
        }
      case IDENTIFIER:{
        i = Identifier();
{if ("" != null) return new IdentifierType(i.s);}
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
}

  static final public Type ArrayType() throws ParseException {
    jj_consume_token(INT);
    jj_consume_token(LBRACK);
    jj_consume_token(RBRACK);
{if ("" != null) return new IntArrayType();}
    throw new Error("Missing return statement in function");
}

  static final public Type BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
{if ("" != null) return new BooleanType();}
    throw new Error("Missing return statement in function");
}

  static final public Type IntegerType() throws ParseException {
    jj_consume_token(INT);
{if ("" != null) return new IntegerType();}
    throw new Error("Missing return statement in function");
}

  static final public Identifier Identifier() throws ParseException {Token t;
    t = jj_consume_token(IDENTIFIER);
{if ("" != null) return new Identifier(t.image);}
    throw new Error("Missing return statement in function");
}

  static final public Exp PrimaryExpression() throws ParseException {Exp e; Identifier i;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INTEGER_LITERAL:{
      e = IntegerLiteral();
      break;
      }
    case TRUE:{
      e = TrueLiteral();
      break;
      }
    case FALSE:{
      e = FalseLiteral();
      break;
      }
    case IDENTIFIER:{
      i = Identifier();
e = new IdentifierExp(i.s);
      break;
      }
    case THIS:{
      e = ThisExpression();
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_4(3)) {
        e = ArrayAllocationExpression();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case NEW:{
          e = AllocationExpression();
          break;
          }
        case LPAREN:{
          jj_consume_token(LPAREN);
          e = Expression();
          jj_consume_token(RPAREN);
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static final public Exp IntegerLiteral() throws ParseException {Token t;
    t = jj_consume_token(INTEGER_LITERAL);
{if ("" != null) return new IntegerLiteral(Integer.parseInt(t.image));}
    throw new Error("Missing return statement in function");
}

  static final public Exp TrueLiteral() throws ParseException {
    jj_consume_token(TRUE);
{if ("" != null) return new True();}
    throw new Error("Missing return statement in function");
}

  static final public Exp FalseLiteral() throws ParseException {
    jj_consume_token(FALSE);
{if ("" != null) return new False();}
    throw new Error("Missing return statement in function");
}

  static final public Exp ThisExpression() throws ParseException {
    jj_consume_token(THIS);
{if ("" != null) return new This();}
    throw new Error("Missing return statement in function");
}

  static final public Exp ArrayAllocationExpression() throws ParseException {Exp size;
    jj_consume_token(NEW);
    jj_consume_token(INT);
    jj_consume_token(LBRACK);
    size = Expression();
    jj_consume_token(RBRACK);
{if ("" != null) return new NewArray(size);}
    throw new Error("Missing return statement in function");
}

  static final public Exp AllocationExpression() throws ParseException {Identifier i;
    jj_consume_token(NEW);
    i = Identifier();
    jj_consume_token(LPAREN);
    jj_consume_token(RPAREN);
{if ("" != null) return new NewObject(i);}
    throw new Error("Missing return statement in function");
}

  static final public Exp PostfixExpression() throws ParseException {Exp e1, e2; Identifier i; ExpList el;
    e1 = PrimaryExpression();
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACK:
      case DOT:{
        ;
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LBRACK:{
        jj_consume_token(LBRACK);
        e2 = Expression();
        jj_consume_token(RBRACK);
e1 = new ArrayLookup(e1, e2);
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        if (jj_2_5(2)) {
          jj_consume_token(DOT);
          jj_consume_token(LENGTH);
e1 = new ArrayLength(e1);
        } else if (jj_2_6(2147483647)) {
          jj_consume_token(DOT);
          i = Identifier();
          jj_consume_token(LPAREN);
el = new ExpList();
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case TRUE:
          case FALSE:
          case THIS:
          case NEW:
          case LPAREN:
          case BANG:
          case IDENTIFIER:
          case INTEGER_LITERAL:{
            el = ExpressionList();
            break;
            }
          default:
            jj_la1[13] = jj_gen;
            ;
          }
          jj_consume_token(RPAREN);
e1 = new Call(e1, i, el);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Exp Expression() throws ParseException {Exp e;
    e = AndExpression();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static final public ExpList ExpressionList() throws ParseException {ExpList el = new ExpList(); Exp e;
    e = Expression();
el.addElement(e);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMMA:{
        ;
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        break label_10;
      }
      e = ExpressionRest();
el.addElement(e);
    }
{if ("" != null) return el;}
    throw new Error("Missing return statement in function");
}

  static final public Exp ExpressionRest() throws ParseException {Exp e;
    jj_consume_token(COMMA);
    e = Expression();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
}

  static final public Exp UnaryExpression() throws ParseException {Exp e;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case BANG:{
      jj_consume_token(BANG);
      e = UnaryExpression();
{if ("" != null) return new Not(e);}
      break;
      }
    case TRUE:
    case FALSE:
    case THIS:
    case NEW:
    case LPAREN:
    case IDENTIFIER:
    case INTEGER_LITERAL:{
      e = PostfixExpression();
{if ("" != null) return e;}
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
}

  static final public Exp MulExpression() throws ParseException {Exp e1, e2;
    e1 = UnaryExpression();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case STAR:{
        ;
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        break label_11;
      }
      jj_consume_token(STAR);
      e2 = UnaryExpression();
e1 = new Times(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Exp AddExpression() throws ParseException {Exp e1, e2; Token op;
    e1 = MulExpression();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_12;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        op = jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        op = jj_consume_token(MINUS);
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      e2 = MulExpression();
if (op.kind == PLUS) e1 = new Plus(e1, e2); else e1 = new Minus(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Exp CompareExpression() throws ParseException {Exp e1, e2;
    e1 = AddExpression();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case LT:{
        ;
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        break label_13;
      }
      jj_consume_token(LT);
      e2 = AddExpression();
e1 = new LessThan(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Exp AndExpression() throws ParseException {Exp e1, e2;
    e1 = CompareExpression();
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case AND:{
        ;
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        break label_14;
      }
      jj_consume_token(AND);
      e2 = CompareExpression();
e1 = new And(e1, e2);
    }
{if ("" != null) return e1;}
    throw new Error("Missing return statement in function");
}

  static final public Statement Block() throws ParseException {StatementList sl = new StatementList(); Statement s;
    jj_consume_token(LBRACE);
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case WHILE:
      case PRINTLN:
      case LBRACE:
      case IDENTIFIER:{
        ;
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        break label_15;
      }
      s = Statement();
sl.addElement(s);
    }
    jj_consume_token(RBRACE);
{if ("" != null) return new Block(sl);}
    throw new Error("Missing return statement in function");
}

  static final public Statement Statement() throws ParseException {Statement s;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case LBRACE:{
      s = Block();
      break;
      }
    default:
      jj_la1[23] = jj_gen;
      if (jj_2_7(2)) {
        s = AssignmentStatement();
      } else if (jj_2_8(2)) {
        s = ArrayAssignmentStatement();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IF:{
          s = IfStatement();
          break;
          }
        case WHILE:{
          s = WhileStatement();
          break;
          }
        case PRINTLN:{
          s = PrintStatement();
          break;
          }
        default:
          jj_la1[24] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
{if ("" != null) return s;}
    throw new Error("Missing return statement in function");
}

  static final public Statement PrintStatement() throws ParseException {Exp e;
    jj_consume_token(PRINTLN);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMI);
{if ("" != null) return new Print(e);}
    throw new Error("Missing return statement in function");
}

  static final public Statement WhileStatement() throws ParseException {Exp e; Statement s;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    s = Statement();
{if ("" != null) return new While(e, s);}
    throw new Error("Missing return statement in function");
}

  static final public Statement IfStatement() throws ParseException {Exp e; Statement s1, s2;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    e = Expression();
    jj_consume_token(RPAREN);
    s1 = Statement();
    jj_consume_token(ELSE);
    s2 = Statement();
{if ("" != null) return new If(e, s1, s2);}
    throw new Error("Missing return statement in function");
}

  static final public Statement ArrayAssignmentStatement() throws ParseException {Identifier i; Exp e1, e2;
    i = Identifier();
    jj_consume_token(LBRACK);
    e1 = Expression();
    jj_consume_token(RBRACK);
    jj_consume_token(ASSIGN);
    e2 = Expression();
    jj_consume_token(SEMI);
{if ("" != null) return new ArrayAssign(i, e1, e2);}
    throw new Error("Missing return statement in function");
}

  static final public Statement AssignmentStatement() throws ParseException {Identifier i; Exp e;
    i = Identifier();
    jj_consume_token(ASSIGN);
    e = Expression();
    jj_consume_token(SEMI);
{if ("" != null) return new Assign(i, e);}
    throw new Error("Missing return statement in function");
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_3_2()
 {
    if (jj_3R_VarDeclaration_120_5_17()) return true;
    return false;
  }

  static private boolean jj_3R_IntegerType_178_5_28()
 {
    if (jj_scan_token(INT)) return true;
    return false;
  }

  static private boolean jj_3R_AssignmentStatement_366_5_21()
 {
    if (jj_3R_Identifier_184_5_20()) return true;
    if (jj_scan_token(ASSIGN)) return true;
    return false;
  }

  static private boolean jj_3_6()
 {
    if (jj_scan_token(DOT)) return true;
    if (jj_3R_Identifier_184_5_20()) return true;
    if (jj_scan_token(LPAREN)) return true;
    return false;
  }

  static private boolean jj_3R_BooleanType_172_5_27()
 {
    if (jj_scan_token(BOOLEAN)) return true;
    return false;
  }

  static private boolean jj_3R_ArrayAssignmentStatement_359_5_22()
 {
    if (jj_3R_Identifier_184_5_20()) return true;
    if (jj_scan_token(LBRACK)) return true;
    return false;
  }

  static private boolean jj_3R_VarDeclaration_120_5_17()
 {
    if (jj_3R_Type_157_7_23()) return true;
    if (jj_3R_Identifier_184_5_20()) return true;
    return false;
  }
